# bible-reader

./: README.md  ui.py  ui_min.py
csv/: bibleid.csv
py/: lang.json  ui.py  ui_min.py
py/csv/: README.md
qt6/: CMakeLists.txt  Main.qml  main.cpp
